Primer bug corregido

--- a/css/main/contacto.css
+++ b/css/main/contacto.css
@@ -62,6 +62,7 @@ main .contacto .formulario .area-texto {
 	color: rgb(127.5, 127.5, 127.5);
 	font-size: 21px;
 	font-weight: 300;
+	font-family: 'Montserrat', sans-serif;
 	width: 100%;
 	max-width: 100%;
 	min-width: 100%;
