--- a/css/main/contacto.css
+++ b/css/main/contacto.css
@@ -40,6 +40,7 @@ main .contacto .formulario .nombre {
 	color: rgb(127.5, 127.5, 127.5);
 	font-size: 21px;
 	font-weight: 300;
+	font-family: 'Montserrat', sans-serif;
 	width: 49%;
 	margin-right: 2%;
 }
@@ -55,6 +56,7 @@ main .contacto .formulario .correo {
 	color: rgb(127.5, 127.5, 127.5);
 	font-size: 21px;
 	font-weight: 300;
+	font-family: 'Montserrat', sans-serif;
 	width: 49%;
 }
 
