--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('css/generales.css');
-@import url('css/cabezera.css');
-@import url('css/main/acerca_de.css');
-@import url('css/main/mis_proyectos.css');
-@import url('css/main/contacto.css');
+@import url('css/generals.css');
+@import url('css/header.css');
+@import url('css/main/about.css');
+@import url('css/main/my-proyects.css');
+@import url('css/main/contact.css');
 @import url('css/footer.css');
 @import url('css/mediaqueries.css');
