--- a/css/footer.css
+++ b/css/footer.css
@@ -6,52 +6,27 @@ footer {
 	justify-content: center;
 }
 
-footer .red-social {
+footer .social-network {
 	color: white;
 	margin-right: 60px;
 	padding: 20px 30px;
 	border-radius: 5px;
+	transition: 0.3s all ease;
 }
 
-footer .instagram {
-	margin-right: 0;
-}
-
-footer .red-social .imagen {
+footer .social-network .image {
 	width: 30px;
 	vertical-align: top;
 }
 
-footer .twitter {
-	transition: 0.3s all ease;
-}
-footer .facebook {
-	transition: 0.3s all ease;
-}
-footer .youtube {
-	transition: 0.3s all ease;
-}
-footer .github {
-	transition: 0.3s all ease;
-}
-
-footer .instagram {
-	transition: 0.3s all ease;
-}
-
-footer .twitter:hover {
-	background: #1da1f2;
-}
-footer .facebook:hover {
-	background: #3b5998;
-}
-footer .youtube:hover {
-	background: #cd210f;
-}
 footer .github:hover {
 	background: #666666;
 }
 
-footer .instagram:hover {
-	background: #3f729b;
+footer .workana:hover {
+	background: #002D72;
+}
+
+footer .linkedin:hover {
+	background: #007EBB;
 }
