--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('css/generals.css');
 @import url('css/header.css');
 @import url('css/main/about.css');
-@import url('css/main/my-proyects.css');
+@import url('css/main/my-projects.css');
 @import url('css/main/contact.css');
 @import url('css/footer.css');
 @import url('css/mediaqueries.css');
