--- a/css/generals.css
+++ b/css/generals.css
@@ -1,7 +1,3 @@
-:root {
-	/* Variables */
-}
-
 body {
 	font-family: 'Montserrat', sans-serif;
 }
@@ -9,4 +5,28 @@ body {
 * {
 	margin: 0; padding: 0;
 	box-sizing: border-box;
+}
+
+/* Animated image load spin */
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+	animation: spin 1s linear infinite;
+	width: 20px; height: 20px;
+	color: white;
+}
+
+.animate-spin circle {
+	opacity: 0.25;
+}
+
+.animate-spin path {
+	opacity: 0.75;
 }
