--- a/css/main/about.css
+++ b/css/main/about.css
@@ -1,9 +1,30 @@
+main .about .loading-image {
+	background-color: #E0E0E0;
+	width: 150px; height: 150px;
+	border-radius: 50%;
+	box-shadow: 0 0 0 5px rgba(255,255,255,0.3);
+	margin: 0 auto;
+	transition: 0.3s all ease;
+	/* Position */
+	position: relative;
+	bottom: 75px;
+	/* Flebox */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+main .about .loading-image svg {
+	width: 80%; height: 80%;
+	border-radius: 50%;
+}
+
 main .about .image {
 	background: url('../../media/photo.jpg');
 	background-size: contain;
 	background-position: center center;
 	background-repeat: no-repeat;
-	display: block;
+	display: none;
 	width: 150px; height: 150px;
 	border-radius: 50%;
 	box-shadow: 0 0 0 5px rgba(255,255,255,0.3);
@@ -14,6 +35,7 @@ main .about .image {
 	bottom: 75px;
 }
 
+main .about .loading-image:hover,
 main .about .image:hover {
 	box-shadow: 0 0 0 5px rgba(255,255,255,1);
 	transform: scale(1.1, 1.1);
