Compresed projects and bg images

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 header {
-	background: url('../media/bg.jpg');
+	background: url('../media/bg.jpg') #41A0D6;
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
