Optimized projects image load

--- a/css/generals.css
+++ b/css/generals.css
@@ -19,7 +19,7 @@ body {
 
 .animate-spin {
 	animation: spin 1s linear infinite;
-	width: 20px; height: 20px;
+	width: 50%; height: 50%;
 	color: white;
 }
 
