--- a/css/main/my-projects.css
+++ b/css/main/my-projects.css
@@ -59,11 +59,27 @@ main .my-projects .projects .project .github-link:focus::after {
 	z-index: 1;
 }
 
-main .my-projects .projects .project .image {
+main .web-development .project .loadingProjectImage {
+	background-color: #f2f2f2;
+}
+
+main .my-projects .projects .project .loadingProjectImage {
+	aspect-ratio: 1 / 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+main .my-projects .projects .project .loadingProjectImage,
+main .my-projects .projects .project .loadedProjectImage {
 	width: 100%;
 	border: 2px solid rgba(73, 163, 214, 0.5);
 	border-radius: 5px;
 	margin-bottom: 25px;
+}
+
+main .my-projects .projects .project .loadedProjectImage {
+	display: none;
 }
 
 main .my-projects .projects .project .github-link .project-name {
