--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -190,7 +190,7 @@
 		font-size: 14px;
 	}
 
-	footer .social-network .loadedProjectImage {
+	footer .social-network .loaded-icon {
 		width: 20px;
 		vertical-align: top;
 	}
